--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   },
-  "keywords": ["mern", "enterprise", "dashboard", "work-requests"],
+  "keywords": [
+    "mern",
+    "enterprise",
+    "dashboard",
+    "work-requests"
+  ],
   "author": "SC Micro",
   "license": "MIT"
-} 
+}
