fix: resolve React routing issues for Vercel deployment
- Add homepage field to client package.json
- Update vercel.json to serve index.html for all routes
- Ensure proper SPA routing for React Router

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "sc-micro-client",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "description": "React frontend for SC Micro Enterprise Management System",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
