fix: add status 200 to SPA fallback route in vercel.json and remove old build dir

--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/index.html"
+      "dest": "/client/dist/index.html",
+      "status": 200
     }
   ],
   "env": {
