--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "buildCommand": "cd client && npm install && npm run build"
+        "distDir": "dist"
       }
     }
   ],
@@ -21,16 +20,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/index.html",
-      "status": 200
+      "dest": "/client/dist/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
+  ]
 } 
