--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "description": "SC Micro Enterprise Management System - Full-stack MERN application for enterprise work request management, customer relationship tracking, and project analytics",
   "scripts": {
     "dev": "vite",
+    "backend": "node server.js",
+    "dev:full": "concurrently \"npm run backend\" \"npm run dev\"",
+    "test:server": "node test-server.js",
     "build": "vite build",
     "vercel-build": "vite build",
     "lint": "eslint .",
@@ -14,19 +17,25 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.0",
     "express": "^4.21.2",
+    "multer": "^2.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "concurrently": "^8.2.2",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
