Add Railway deployment configuration and deployment guide
- Add railway.json for Railway deployment configuration
- Add Procfile as alternative deployment config
- Update package.json with start script for Railway
- Create comprehensive DEPLOYMENT_GUIDE.md
- Update config.js with proper Railway URL placeholder
- Prepare backend for production deployment on Railway

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite",
     "backend": "node server.js",
+    "start": "node server.js",
     "dev:full": "concurrently \"npm run backend\" \"npm run dev\"",
     "test:server": "node test-server.js",
     "build": "vite build",
